Reordered sections, changed background image, background color, font color, added style icons for git and other pages, moved about me to bottom section with links to each site

--- a/css/layout.css
+++ b/css/layout.css
@@ -22,7 +22,8 @@
 /* a. General Styles
 /* ------------------------------------------------------------------ */
 
-body { background: #0f0f0f; }
+/** BACKGROUND COLOR BEYOND PHOTO */
+body { background: 0092df; }
 
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
